2010-07-26  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Correct setting for backspace key.

2010-07-25  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Add support for backtab character.

2010-06-15 Riccardo Mottola

	* NSProgressIndicator-test:
	Added new test for the progress indicator

2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>

	* Controller.m: On MinGW, display a main window so GSTest
	can be run when the WinUXTheme is enabled.
	* NSButton-test/NSButton-test.m: Add tooltips to the buttons.
	This is to demonstrate a bug I am reporting.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show an NSPushOnPushOff button,
	as well as a disabled button.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSWindowStyleMask-test/NSWindowStyleMask-test.m: Tweak to allow
	creating NSPanels, and allow setting the new NSWindow and NSPanel
	style masks.
	Also added a close button and descriptive label to the created
	windows.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Add NSPopUpButton and NSComboBox

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show some NSSegmentedControls

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* GNUmakefile:
	* NSButton-test/NSButton-test.m:
	* testList.h: Enable the NSButton test. Modify the test to show off
	all of the bezel styles.

2009-12-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile:
	* NSOpenPanel-test/GNUmakefile:
	* NSOpenPanel-test/NSOpenPanel-test.m: Add demo/test for the Open
	panel. The test has been adapted from the Save panel test.

2009-12-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* NSSavePanel-test/NSSavePanel-test.m: Add field to supply a list
	of allowed file type extension to the save panel and a button to
	control whether the panel allows other file type extensions.

2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>
