@@ -1,3 +1,8 @@
+2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* NSTextView-test/NSTextView-test.m: Test multiple layout managers
+	per text storage, and multiple text views per layout manager.
+
 2010-07-26  Fred Kiefer  <FredKiefer@gmx.de>
 
 	* KeyboardInput-test/ConvertKeys.m: Correct setting for backspace key.
